@@ -1,4 +1,5 @@
 0.1723
+    - removed EXPERIMENTAL map_param method from DBIx::Custom
     - removed EXPERIMENTAL flag from the following DBIx::Custom::Result mehotds
       filter_on, type_rule, type_rule_off, type_rule_on, type_rule1_off,
       type_rule1_on, type_rule2_off, type_rule2_on
@@ -6,11 +7,12 @@
       sqlfilter, type_rule_off, type_rule1_off, type_rule2_off,
       table_alias, wrap
     - removed EXPERIMENTAL flag from DBIx::Custom::Order
-    - removed EXPERIMETNAL flag from the following DBIx::Custom mehtods
+    - removed EXPERIMETNAL flag from the following DBIx::Custom methods
       exclude_table, user_column_info,
       user_table_info, available_datatype, available_typename,
       assign_param, count, get_column_info, get_table_info
-      order, show_datatype, show_typename methods, type_rule
+      order, show_datatype, show_typename methods, type_rule,
+      mapper
     - added EXPERIMENTAL update_timestamp method to DBIx::Custom
     - added EXPERIMENTAL insert_timestamp method to DBIx::Custom
     - removed EXPERIMENTAL timestamp attribute from DBIx::Custom
